...
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Strings related to login and signup -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="signup_email">Email</string>
    <string name="signup_pseudo">Pseudo</string>
...
